--- a/roobiology.html
+++ b/roobiology.html
@@ -256,7 +256,10 @@
 				<span class="A-audiobook">In the pre-Time War era there are between 3 and 9 million Gallifreyans living on the planet. </span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid.</span> They smell of tangy celestial potental. The frames of some looms are silver. A new loom probably takes over 11 years to produce its first loomling. </span>
+				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid.</span>
+They smell of tangy celestial potental. The frames of some looms are
+silver. A new loom probably takes over 11 years to produce its first
+loomling. </span>
 				<span class="A-audiobook">The Looms are held in the loomshed of the&nbsp;physical house. Each House's loom has its own Loom core, which serves as
 					its genius loci. This creates a template that standardizes the abilities
 					<span class="A-alternate">and blood </span>of everyone loomling of that family. </span>
@@ -793,7 +796,9 @@ every Gallifreyan has a unique psycho-kinetic signature, this allows</span>
 					suggestions in people who are trying to read their minds. <br><br></span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">Every Time Lord possesses a quantum of Artron Energy which gives them a unique artron energy signature. </span>
+				<span class="A-audiobook"><span class="A-game">Artron
+echos are emited by all sapient beings. The greater affect that a
+person is going to have on coming history the stronger the echos.&nbsp;</span>Every Time Lord possesses an entire quantum of Artron Energy which gives them a unique artron energy signature. </span>
 				<span class="A-audiobook">&nbsp;Gallifreyans generate Artron Energy traces
 					that can be used by others to determine their age and identity. </span>
 				<span class="A-audiobook"></span><span class="A-licensed">This is significantly more life-energy than a human has.</span><span class="A-audiobook"><span class="A-fanon"> </span>This is because Artron Energy levels are determined in part by the subjects total life-span (past and future). <span class="A-fanon">It's possible that Gallifreyan females might be more gifted with telepathic abilities.</span> </span><span class="A-audiobook"></span><span class="A-audiobook">The energy they possess increases by a minute amount every time they pass through the Vortex.
@@ -976,7 +981,10 @@ This allows them to hide from predators that hunt by scent. </span>They have a w
 				</span>
 				<span class="A-audiobook">
 					<span class="A-tv">With an oxygen supply this allows them to remain conscious for 6 minutes <span class="A-audiobook">and survive up to 20 minutes</span> in space unprotected. </span>Without an oxygen supply they will only have 3 minutes
-					of consciousness. </span><span class="A-tv">Despite the above mentioned barriers, an unprotected Gallifreyan's eyes will be permanently destroyed if exposed to the cold and vacuum of space for too many minutes. </span><span class="A-game">Most humans are stronger then the average Gallifreyan </span>
+					of consciousness. </span><span class="A-tv">Despite
+the above mentioned barriers, an unprotected Gallifreyan's eyes will be
+permanently destroyed if exposed to the cold and vacuum of space for
+too many minutes. </span><span class="A-game">Most humans are stronger then the average Gallifreyan </span>
 						<span class="A-audiobook">
 								<span class="A-licensed">(but, due to their second heart, and exposure to the Untempered Schism,
 									<span class="A-audiobook">Time Lords</span> have </span>
@@ -1395,11 +1403,10 @@ future.<br><br></span> </span>
 			<div class="section">
 				<span class="A-audiobook">
 					<span class="A-licensed">The random nature of regeneration terrifies most Old Blood Gallifreyans. </span>Until recently Regeneration was still
-					a relatively risky procedure.
-					<span class="A-tv">While regenerating </span>a Gallifreyan's body might incorporate foreign materials it comes in contact with.
+					a relatively risky procedure. <span class="A-tv">During regeneration </span>their immune systems are comprimised, making <span class="A-tv">their biodata vulnerable to</span> paradox viruses or other<span class="A-tv"> types of minor temporal paradox which can lead to all sorts of complications. While regenerating </span>a Gallifreyan's body might incorporate foreign materials it comes in contact with.
 					<span class="A-game">Sometimes this would lead to</span>
 					<span class="A-tv">development of severe allergies (for example to gases in the praxis range or extremely humid air).</span> If the contamination
-					consist of biodata, </span>
+					consisted of biodata, </span>
 				<span class="A-audiobook">the body might incorporate the foreign material </span>
 				<span class="A-tv">allowing them to change species. </span>
 				<span class="A-audiobook">Thus
