--- a/roobiology.html
+++ b/roobiology.html
@@ -285,8 +285,8 @@ loomling. </span>
 			</div>
 			<div class="section">
 				<span class="A-audiobook">Depending on the programing that house's loom core, some looms
-					<span class="A-tv">produce offspring in the form of a small child<span class="A-notbbc">e</span> (reminiscent of a human child)</span>, but most loomlings emerge as full grown adults. </span>
-				<span class="A-audiobook"><span class="A-notbbc">Looms that produced childrene were kept inside cradles.</span> &nbsp;These child<span class="A-notbbc"></span></span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-audiobook"><span class="A-notbbc"></span> have milk teeth.</span><span class="A-notbbc"> Memetic priming was used to give the loomlings foreknowledge.&nbsp;</span><span class="A-audiobook">A loomling will have trouble using proper grammar, but can walk right after Looming. </span>
+					<span class="A-tv">produce offspring in the form of a small child<span class="A-notbbc">e</span> (physically resembling&nbsp;a human child)</span>, but most loomlings emerge as full grown adults. </span>
+				<span class="A-audiobook"><span class="A-notbbc">Looms that produced childrene were kept inside cradles.</span>&nbsp;These child<span class="A-notbbc"></span></span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-audiobook"><span class="A-notbbc"></span> have milk teeth.</span><span class="A-notbbc"> Memetic priming was used to give the loomlings foreknowledge.&nbsp;</span><span class="A-audiobook">A loomling will have trouble using proper grammar, but can walk right after Looming. </span>
 				<span class="A-tv">
 					<span class="A-audiobook">It should be noted that Gallifreyans break most of the laws of biology before they take their first step. </span>
 				</span>
@@ -512,11 +512,17 @@ the smallest details of the last few minutes.&nbsp;</span><span class="A-license
 						<span class="A-fanon">(in that incarnation). </span>
 					</span>
 				</span>
-				<span class="A-audiobook">This perfect memory is sometimes called 'The Curse of the Gallifreyans.' Exposure to cronon particles (like those emitted
-					by a TARDIS) can help a Gallifreyan recall memories that he hasn't accessed for several centuries. Gallifreyans can
-					check their own minds for dead spots in there memory to tell if there’s any damage to their brain. Unfortunately,
-					because of their artificially extended life span, Gallifreyans need to clear out some of their memories every few thousand
-					years. They usually store the more important memories using telepathic circuits. </span>
+				<span class="A-audiobook">This
+perfect memory is sometimes called 'The Curse of the Gallifreyans.'
+Exposure to cronon particles (like those emitted by a TARDIS) can help
+a Gallifreyan recall memories that he hasn't accessed for several
+centuries. Gallifreyans can check their own minds for dead spots in
+there memory to tell if there’s any damage to their brain.
+Unfortunately, because of their artificially extended life span,
+Gallifreyans need to clear out some of their memories every few
+thousand years. They usually store the more important memories using
+telepathic circuits. For more extreme modifications Gallifreyan
+psychosurgeons are needed. </span>
 				<span class="A-notbbc">Gallifreyan memory wiping techniques aren't totally reliable and the memories often reappear as dreams. </span>
 				<span class="A-tv">
 					<span class="A-audiobook">Despite their genetically engineered origin,</span> Gallifreyans have race memories, some of which relate to the Chronovores.</span>
