--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -510,6 +510,7 @@ Depending on conditions </span><span class="A-tv">the moon appears to be copper 
 				</div>
 				<figure>
 					<img src="images/gallifreymountians.jpg" alt="Gallifrey">
+					<img src="images/wild_endeavour.jpg" alt="Gallifrey">
 					<img src="images/garden.jpg" alt="Gallifrey">
 					<img src="images/outergallifrey1.jpg" alt="Gallifrey">
 					<img src="images/deathzone1.jpg" alt="Death Zone">
@@ -553,7 +554,7 @@ Depending on conditions </span><span class="A-tv">the moon appears to be copper 
 				</div>
 				<div class="section">
 					<span class="A-audiobook"><br>Gallifrey's surface is divided up into sectors </span>
-						<span class="A-alternate">including Prydonia, Capari, Anarcos,</span> <span class="A-licensed">Barnakadon (with its Valley of the Shadow), and the Province of Arbesk</span><span class="A-audiobook"><span class="A-tv"><span class="A-licensed">.</span> </span></span><span class="A-tv"><span class="A-audiobook"><span class="A-infinity">The <span class="A-licensed">majority </span>of </span></span></span><span class="A-tv">continent of Wild Endeavor </span><span class="A-tv"><span class="A-audiobook"><span class="A-infinity">appears to cover the arctic northern region,</span> but it southern most areas are located in the southern hemisphere. </span></span><span class="A-audiobook"><span class="A-tv">The Capitol city is found </span>
+						<span class="A-alternate">including Prydonia, Capari, Anarcos,</span> <span class="A-licensed">Barnakadon (with its Valley of the Shadow), and the Province of Arbesk</span><span class="A-audiobook"><span class="A-tv"><span class="A-licensed">.</span> </span></span><span class="A-tv"><span class="A-audiobook"><span class="A-infinity">The <span class="A-licensed">majority </span>of </span></span></span><span class="A-tv">continent of Wild Endeavor </span><span class="A-tv"><span class="A-audiobook"><span class="A-infinity">appears to cover the arctic northern region,</span> but it southern most areas are located in the southern hemisphere. <span class="A-game">There are some jungles on the continent of Wild Endeavor.</span>&nbsp; </span></span><span class="A-audiobook"><span class="A-tv">The Capitol city is found </span>
 						</span>
 						<span class="A-tv">
 							<span class="A-infinity">
@@ -711,7 +712,7 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 					<span class="A-audiobook">Sarlain </span>
 					<span class="A-tv"> (a yellow flower that resembles a Terran Daisy,
 						<span class="A-audiobook">Daffodil or Rose)</span></span><span class="A-audiobook">, </span>
-					<span class="A-audiobook">Moonlight Blooms (silver petals, symbolizes peace and meditation), Gallifreyan Flowers of Remembrance (<i>Memento Mori - </i> 6 yellow petals)</span><span class="A-audiobook">, Schlenk Blossom</span><span class="A-audiobook">s <span class="A-licensed">(golden-green</span>&nbsp;with a strong scent), </span>
+					<span class="A-audiobook">Moonlight Blooms (silver petals, symbolizes peace and meditation), Gallifreyan Flowers of Remembrance <span class="A-infinity">of the Lost Dead </span>(<i>Memento Mori - </i> 6 yellow petals)</span><span class="A-audiobook">, Schlenk Blossom</span><span class="A-audiobook">s <span class="A-licensed">(golden-green</span>&nbsp;with a strong scent), </span>
 					<span class="A-audiobook">
 						<span class="A-licensed">Gallifreyan Heather (which is harvested for its scent), Arkytior&nbsp;</span></span><span class="A-audiobook">(a pearl-gray Gallifreyan rose)</span><span class="A-audiobook"><span class="A-licensed">, </span></span><span class="A-audiobook"><span class="A-licensed">velvet-red&nbsp;</span>Madevinia Aridosa (small desert plants that have an incredibly rapid life cycle),</span><span class="A-audiobook"><span class="A-licensed"> </span>
 					</span>
@@ -817,7 +818,11 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 					<span class="A-audiobook"> Cobblemice (which sprout wings), Rovie Mice (live in fields, long lived if they are not killed, sometimes kept as pets),
 						Vex (burrowing animal), Gallifreyan Womprats (1 meter long rats with fifteen legs), Pig-Rats, Rabbits, </span><span class="A-audiobook"><span class="A-licensed"></span>Flubbles (small six-legged koalas), an animal similar to a rabbit, but rounder, </span>
 					<span class="A-audiobook">Sealak (often eaten), <span class="A-licensed">Bear-Ass (a donkey like animal with bear-like qualities),</span> Horse-Cats,&nbsp;</span><span class="A-audiobook"><span class="A-licensed"></span>Elephants, </span>
-					<span class="A-audiobook">Pig-Bears (which can be trained to household pets, <span class="A-licensed">and can probobly suffer from swine fever),</span></span><span class="A-audiobook"><span class="A-licensed"> wolf-like creatures (with very long snouts and black-and-white striped fur that are almost as big as adult humanoid), Broakir (live in foothills and are often hunted for food), Baanjxx (arboreal browser, eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
+					<span class="A-audiobook">Pig-Bears (which can be trained to household pets, <span class="A-licensed">and can probobly suffer from swine fever),</span></span><span class="A-audiobook"><span class="A-licensed">
+wolf-like creatures (with very long snouts and black-and-white striped
+fur that are almost as big as adult humanoid), Broakir (live in
+foothills and are often hunted for food), Baanjxx (arboreal browser,
+eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
 						</span> The Gallifreyan Marlot is purple and unique in all of time and space. The Doctor and Ruath
 						<span class="A-licensed">
 						re-</span>introduced cats into the eco-system </span>
@@ -880,7 +885,10 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 						<span class="A-game">But they must remain completely calm to use it. Any pain or unexpected shock will can cause them to exhale the air
 							in their lungs. </span>
 					</span>
-					<span class="A-audiobook">They can hold their breath for hours if they don't move much.&nbsp;</span><span class="A-audiobook">Shobogans had the same resistance to being frozen solid that modern Gallifreyans do. Their blood, hormones and pheromones of the ancient Shobogans is distinctly different from modern Gallifreyans. </span>
+					<span class="A-audiobook">They can hold their breath for hours if they don't move much.&nbsp;</span><span class="A-audiobook">Shobogans
+had the same resistance to being frozen solid that modern Gallifreyans
+do. Their blood, hormones and pheromones of the ancient Shobogans is
+distinctly different from modern Gallifreyans. </span>
 				</div>
 				<div class="section">
 					<span class="A-audiobook">They
@@ -908,29 +916,51 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 				</div>
 				<div class="section">
 					<span class="A-licensed"> The official documents and records stated that</span><span class="A-audiobook"> Shobogans </span><span class="A-licensed">had a normal life-span of 300 years and </span><span class="A-audiobook">had no chance of living more then a few centuries. </span>
-					<span class="A-tv">Without the regenerative powers of modern Gallifreyans, a Gallifreyan would be confined to wheelchairs before they reached 200 years old. If their life was prolonged 700 years beyond that point the subject's body would atrophie until he's only a few feet tall. </span>
+					<span class="A-tv">Without
+the regenerative powers of modern Gallifreyans, a Gallifreyan would be
+confined to wheelchairs before they reached 200 years old. If their
+life was prolonged 700 years beyond that point the subject's body would
+atrophie until he's only a few feet tall. </span>
 					<span class="A-licensed">The bodies of the dead were usualy burned in a pyre.</span>
 				</div>
 				<div class="section">
-					<span class="A-infinity">However, Shobogans that were given the Timeless Child's gift of unlimited regeneration were could live forever if they avoided accidents.</span>
-					<span class="A-game"> It is know that the rule of the 508 Pythias spanned 8,000,000 years. <span class="A-fanon">This could be because the Pythias had access to the elixier of Karn, or perhapse they too had received the gift of unlimited regenerations. </span></span>
+					<span class="A-infinity">However,
+Shobogans that were given the Timeless Child's gift of unlimited
+regeneration were could live forever if they avoided accidents.</span>
+					<span class="A-game"> It is know that the rule of the 508 Pythias spanned 8,000,000 years. <span class="A-fanon">This
+could be because the Pythias had access to the elixier of Karn, or
+perhapse they too had received the gift of unlimited regenerations. </span></span>
 				</div>
 				<div class="section">
 					<span class="A-audiobook">By human standards Shobogans were
 						<span class="A-game">stronger,</span> more athletic, and </span>
-					<span class="A-audiobook">significantly taller then an average human. The Shobogan women tended to be much taller then Shobogan males (this changed after when the looms began creating modern Gallifreyans). The women also tended to have well developed muscles. </span>
-					<span class="A-tv">While the Shobogans lacked the regenerative powers of modern Gallifreyans, </span><span class="A-audiobook">it is know that they were much more powerful telepaths, and the adult minds of the planet were in constant telepathic entrelacement due to an organ located in their hypothalamus. This was thought to be the greatest curse of Shobogan civilization. </span><span class="A-fanon">It is possible they might have had the telepathic, adaptive, and healing abilities similar to the Marshmen from Alzarius.</span>
+					<span class="A-audiobook">significantly
+taller then an average human. The Shobogan women tended to be much
+taller then Shobogan males (this changed after when the looms began
+creating modern Gallifreyans). The women also tended to have well
+developed muscles. </span>
+					<span class="A-tv">While the Shobogans lacked the regenerative powers of modern Gallifreyans, </span><span class="A-audiobook">it
+is know that they were much more powerful telepaths, and the adult
+minds of the planet were in constant telepathic entrelacement due to an
+organ located in their hypothalamus. This was thought to be the
+greatest curse of Shobogan civilization. </span><span class="A-fanon">It is possible they might have had the telepathic, adaptive, and healing abilities similar to the Marshmen from Alzarius.</span>
 				</div>
 				<div class="section">
-					<span class="A-audiobook">Approximately every 1,000 years a Shobogan was born who could shield their minds from telepathy and had more psionic powers. They were known as Individuals </span><span class="A-game">and they had powers and abilities that, in the modern era, are considered to be nothing buy myth and superstitions. </span>			
+					<span class="A-audiobook">Approximately
+every 1,000 years a Shobogan was born who could shield their minds from
+telepathy and had more psionic powers. They were known as Individuals </span><span class="A-game">and they had powers and abilities that, in the modern era, are considered to be nothing buy myth and superstitions. </span>			
 					<span class="A-audiobook">Some were powerful seers and visionaries </span>
 					<span class="A-licensed">and many had telekinetic powers. </span>	
 					<span class="A-audiobook">When children, Individuals also made good time pilots. </span><span class="A-fanon">Because of their ability to focus </span><span class="A-game">older Individuals often became great philosophers, scientists, and explorers. Many became Heroes. </span>
 				</div>
 				<div class="section">
 					<span class="A-audiobook">The ancient Shobogans would be virtually extinct
-						<span class="A-licensed">a few hundred years</span> after the last Pythia cursed the entire species with sterility. Fortunately, by that point,
-						Rassilon and his followers had developed an alternative means of reproduction. Over time the term Shobogans became slang for any Gallifreyan who rejects the traditions and culture of Rassilon’s Time Lords.</span>
+						<span class="A-licensed">a few hundred years</span>
+after the last Pythia cursed the entire species with sterility.
+Fortunately, by that point, Rassilon and his followers had developed an
+alternative means of reproduction. Over time the term Shobogans became
+slang for any Gallifreyan who rejects the traditions and culture of
+Rassilon’s Time Lords.</span>
 					<span class="A-fanon">For more details on the modern species of Gallifreyans see the </span>
 					<a href="roobiology.html">Gallifreyan Biology Page</a>
 				</div>
