--- a/rootimeline2.html
+++ b/rootimeline2.html
@@ -2008,13 +2008,13 @@ huon particles. This story becomes a Time Lord legend.&nbsp;</span>
 					<span class="A-fanon">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</span></span><span class="A-fanon">After insuring the safety of Susan,
 				</span>
 				<span class="A-infinity">Patience flees Gallifrey
-					<span class="A-fanon">(possibly because there is already a version of herself living there?).</span> &nbsp;She departs in an ancient Prototype
+					<span class="A-fanon">(possibly because there is already a version of herself living there?).</span>&nbsp;She departs in an ancient Prototype
 					</span>
 				<span class="A-infinity">Time Travel Capsule that belonged to her husband
 					<span class="A-fanon">(probably the Other but possibly the Omega).&nbsp; </span>
 				</span>
 				<span class="A-infinity">The </span>
-				<span class="A-infinity">Proto-type TT Capsule that Patience fled in was damaged and it rips a hole in the Vortex as it travels.&nbsp; Patience
+				<span class="A-infinity">Proto-type TT Capsule that Patience fled in was damaged and it rips a hole in the Vortex as it travels.&nbsp;Patience
 					ends up on the planet Salomon in the year 2,000,000 BC where she is frozen in suspended animation for approximately
 					2 million years. <span class="A-licensed"></span> <br><br></span><span class="A-fanon">3? &nbsp;&nbsp;</span>
 				&nbsp; &nbsp;&nbsp;&nbsp;
@@ -2062,10 +2062,7 @@ those words show up graffitied on many of the buildings in the Capitol.
 				<span class="A-tv">
 					<span class="A-tv">
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The symbiotic nuclei are
-						<span class="A-fanon"> </span>developed b
-					</span>
-					<span class="A-fanon">
-						<span class="A-tv">y Rassilon. These nuclei allow a Gallifreyan to make the </span>
+						<span class="A-fanon"> </span>developed b</span><span class="A-fanon"><span class="A-tv">y Rassilon. These nuclei allow a Gallifreyan to make the </span>
 					</span>
 				</span>
 				<span class="A-tv">
@@ -2333,7 +2330,7 @@ it. This story becomes a popular fairytale told to time-tots. </span></span>
 				</span>
 				<span class="A-audiobook">
 					<span class="A-audiobook">
-						<span class="A-alternate">&nbsp;Susan's Mother thinks that Susan's Grandfather
+						<span class="A-alternate">Susan's Mother thinks that Susan's Grandfather
 							<span class="A-fanon"></span>is a bad influence on her. </span>
 					</span>
 				</span>
