--- a/rootimeline3.html
+++ b/rootimeline3.html
@@ -1897,20 +1897,8 @@ this report suppressed. <br>
 									<span class="A-tv">first </span>
 								</span>child,
 								<span class="A-infinity">a son,</span> is born.</span>
-							<span class="A-tv">&nbsp;</span>
-						</span>
-					</span>
-					<span class="A-tv"> &nbsp;The&nbsp;child of
-						<span class="A-infinity"> this first born </span>off-spring&nbsp; (Susan) is the Doctor's granddaughter, Susan.</span>
-					<span class="A-infinity">
-						<span class="A-game">
-							<span class="A-infinity">&nbsp;
-								<span class="A-audiobook">&nbsp;</span>
-							</span>
-						</span>
-					</span>
-					<span class="A-infinity">
-						<span class="A-infinity">At the time of the son's birth the Doctor, claims he is getting old.</span>
+							<span class="A-tv"></span></span></span><span class="A-tv">The&nbsp;child of
+						<span class="A-infinity"> this first born </span>off-spring&nbsp;(Susan) is the Doctor's granddaughter, Susan,</span><span class="A-infinity"><span class="A-game"><span class="A-infinity"><span class="A-audiobook">&nbsp;</span></span></span></span><span class="A-infinity"><span class="A-infinity">At the time of the son's birth the Doctor, claims he is getting old.</span>
 					</span>
 					<span class="A-alternate">
 						<br>
@@ -2098,13 +2086,7 @@ grow up there. <span class="A-game">
 						<span class="A-game">
 							<span class="A-infinity">
 								<span class="A-fanon">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;(probably well over 16 years </span>after being born)
-								<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Doctor's first born son will&nbsp;
-								marry. &nbsp;
-								<span class="A-alternate">Susan will look a lot like her mother. &nbsp;</span>
-							</span>
-						</span>
-					</span>
-					<span class="A-licensed">One of Susan's parents (almost certainly her mother) was related to Rassilon (who was probably from House Fordfarding).</span>
+								<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Doctor's first born son will&nbsp;marry.&nbsp;<span class="A-alternate">Susan will look a lot like her mother.&nbsp;</span></span></span></span><span class="A-licensed">One of Susan's parents (almost certainly her mother) was related to Rassilon (who was probably from House Fordfarding/Rassilon).</span>
 					<span class="A-tv"> </span>
 				</p>
 				<p>
@@ -2249,10 +2231,7 @@ and eventually Antak is killed. &nbsp;Jane loses the TARDIS and spend
 					</span>
 					<span class="A-fanon">
 						<span class="A-licensed">
-							<span class="A-alternate"></span>
-						</span>
-					</span>
-					<span class="A-licensed">&nbsp; One of Susan's parents (almost certainly her mother) was related to Rassilon (who was probably from House Fordfarding).</span>
+							</span></span><span class="A-licensed"> One of Susan's parents (almost certainly her mother) was related to Rassilon (who was probably from House Fordfarding).</span>
 					<span class="A-tv"> &nbsp;
 						<span class="A-fanon"> This Doctor will be nicknamed the Scientist. &nbsp;</span>
 					</span>
@@ -2344,10 +2323,7 @@ and eventually Antak is killed. &nbsp;Jane loses the TARDIS and spend
 				<span class="A-tv">/ less than 16 years before Marco Polo from Susan's POV&nbsp; /
 					<span class="A-game">
 						<span class="A-audiobook">more then 50 years before Here be Monsters from Susan's POV / </span>38 years before Dalek Invasion of Earth from Susan's
-						POV </span>
-				</span>
-				<span class="A-game">
-					<span class="A-game">)</span>
+						POV</span></span><span class="A-game"><span class="A-game">)</span>
 				</span>
 				<span class="A-game"> </span>
 				<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
@@ -2358,27 +2334,21 @@ and eventually Antak is killed. &nbsp;Jane loses the TARDIS and spend
 								<span class="A-audiobook">
 									<span class="A-infinity">The Hand of Omega brings the Hartnell Doctor back in time to save </span>
 								</span>
-								<span class="A-infinity">Patience and her granddaughter.&nbsp;</span>
-								The Hartnell Doctor (whom Patience doesn't recognize - except for his ring) witnesses</span> the birth of the Doctor's
-							grandchild, Susan</span>
-					</span>.&nbsp;
-					<span class="A-audiobook"> She looks a lot like her mother. </span>&nbsp;</span>
-				<span class="A-tv">Susan </span>
+								<span class="A-infinity">Patience and her granddaughter.&nbsp;</span>The Hartnell Doctor (whom Patience doesn't recognize - except for his ring) witnesses</span> the birth of the Doctor's
+							grandchild, Susan</span></span>.&nbsp;
+					<span class="A-audiobook"> She looks a lot like her mother.&nbsp;</span></span><span class="A-tv">Susan </span>
 				<span class="A-tv">has very strong telepathic potential (more then the Doctor's), that will develop in adolescence, but will require training
 					to be perfected.
 					<span class="A-audiobook"></span>
 				</span>
 				<span class="A-infinity">
-					<span class="A-audiobook">&nbsp; Susan is a Time Lady and appears to have innate sense of the passage of time and never wears a watch. &nbsp;However
-						she isn't very good at remembering dates.&nbsp; She has two hearts (though a few novels state she only has one) and
-						Emerald green eyes.&nbsp; Her lifespan is much longer then a human's.&nbsp; </span>
+					<span class="A-audiobook">Susan is a Time Lady and appears to have innate sense of the passage of time and never wears a watch. &nbsp;However
+						she isn't very good at remembering dates. She has two hearts (though a few novels state she only has one) and
+						Emerald green eyes. Her lifespan is much longer then a human's.&nbsp; </span>
 				</span>
 				<span class="A-infinity">
 					<span class="A-fanon">
-						<span class="A-audiobook">Susan's mother was killed.&nbsp; </span>
-					</span>
-				</span>
-				<span class="A-infinity">A few minutes after Susan's birth</span>
+						<span class="A-audiobook">Susan's mother was killed.&nbsp;</span></span></span><span class="A-infinity">A few minutes after Susan's birth</span>
 				<span class="A-infinity"> the person with the ring </span>
 				<span class="A-infinity">
 					<span class="A-game">(the Hartnell Doctor)</span>
@@ -2391,14 +2361,7 @@ and eventually Antak is killed. &nbsp;Jane loses the TARDIS and spend
 							<span class="A-licensed"></span>end up
 							<span class="A-fanon">fleeing</span>
 							into Gallifrey's past,
-							<span class="A-game">possibly with Patience. &nbsp;</span>
-						</span>
-					</span>
-				</span>
-				<span class="A-infinity">
-					<span class="A-fanon">
-						<span class="A-audiobook">
-							<span class="A-licensed">Susan might have been named</span>
+							<span class="A-game">possibly with Patience.&nbsp;</span></span></span></span><span class="A-infinity"><span class="A-fanon"><span class="A-audiobook"><span class="A-licensed">Susan might have been named</span>
 						</span>
 					</span>
 				</span>
@@ -2410,12 +2373,7 @@ and eventually Antak is killed. &nbsp;Jane loses the TARDIS and spend
 					</span>
 				</span>
 				<span class="A-audiobook">
-					<span class="A-licensed">Arkytior</span>
-				</span>
-				<span class="A-infinity">
-					<span class="A-fanon">
-						<span class="A-audiobook">
-							<span class="A-licensed">.</span>
+					<span class="A-licensed">Arkytior</span></span><span class="A-infinity"><span class="A-fanon"><span class="A-audiobook"><span class="A-licensed">.</span>
 						</span>
 					</span>
 				</span>
@@ -3234,11 +3192,11 @@ serve the Universe as mere men.&nbsp; </span>
 						<br>
 					</span>
 					<span class="A-audiobook">-1~ &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; (probably shortly before Marnal attacks the Vore / before TID)
-						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Time Lady Larn leaves the future and
-						travels back into Gallifrey's relative past (from her point of view). This is a violation of the Laws of Time.&nbsp;
+						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Time Lady Larna leaves the future and
+						travels back into Gallifrey's relative past (from her point of view). This is a violation of the Laws of Time.
 						She does this as part of her Project to help Gallifrey survive various dangers so that it falls at the correct time.&nbsp;
 						She also helps Ulysses study the Vore's </span>
-					<span class="A-audiobook">Temporal Cicatrix Scar.&nbsp; The High Council knows of Ulysses secrete researches
+					<span class="A-audiobook">Temporal Cicatrix Scar.&nbsp;The High Council knows of Ulysses secrete researches
 						<span class="A-fanon"> but don't know about Larn. &nbsp;</span>
 					</span>
 					<span class="A-audiobook">&nbsp;
