Chapter Academy Stuff

--- a/rootimelord.html
+++ b/rootimelord.html
@@ -820,15 +820,10 @@ my actions and my thoughts." </em>
 			<h2>THE PRYDONIAN ACADEMY OF TIME
 				<br>The University, The Time Lord Academy</h2>
 			<div class="section">
-				<span class="A-audiobook">Novices </span>
-				<span class="A-audiobook">at the Chapter Academies
-					<span class="A-game">who hope to continue their studies</span> must enroll the
-					<span class="A-tv">Time Academy </span>at the Capitol. The entrance examination is taken while still in brainbuffing and judged by Adjudicators.
-					If they are accepted then, after </span>
-				<span class="A-game">12 years with
-					<span class="A-tv">their Chapter's Academy, they are enrolled in the Time Academy. </span>
-				</span>
-				<span class="A-licensed">The education of a Time Lord is considered to be an honor and a privilege,</span>
+				<span class="A-game">All Gallifreyans have the potential to become Time Lords but it was a title they would have to earn.&nbsp;</span><span class="A-tv"></span><span class="A-audiobook"><span class="A-tv">The </span>Prydon College's <span class="A-tv">Time Academy is the only one that can grant the title of Time Lord</span>
+– so all would-be Time Lord</span><span class="A-audiobook">&nbsp;</span><span class="A-audiobook"></span><span class="A-audiobook">have to be inducted there after graduating<span class="A-game"> from the 5th grade of </span>their chapter’s academy. Novices take&nbsp;</span><span class="A-audiobook">The entrance examination is while still in brainbuffing and it is judged by Adjudicators.</span><span class="A-audiobook"> </span><span class="A-game"><span class="A-licensed">Failure was one of the major fears of every 7 year-old.</span> </span>
+						<span class="A-audiobook"></span><span class="A-game">If they are score is accepted then, after 12 years
+							<span class="A-tv">with their chapter's academy, they can be enrolled in the <span class="A-audiobook">Prydon</span> Time Academy. </span></span><span class="A-audiobook"><span class="A-game"></span></span><span class="A-game"><span class="A-tv"><br><br></span></span><span class="A-licensed">The education of a Time Lord is considered to be an honor and a privilege,</span>
 				<span class="A-alternate"> but costs a House a small fortune. </span>
 				<span class="A-audiobook">At some points in Gallifrey's history some aliens were allowed to take classes at the Academy. These aliens are not
 					allowed to learn any temporal engineering skills. One of these races was the Gresaurus, another was the War Lord Aliens.
@@ -888,11 +883,8 @@ Operation and Maintenance, Transcendental Dimensions, </span>
 				</span>
 			</div>
 			<div class="section">
-				<span class="A-game">All Gallifreyans have the potential to become Time Lords but it was a title they would have to earn. </span>
-				<span class="A-tv">Many Gallifreyans (such as future members of the Watch or Traffic Control) attend the Time Academy, but only a very select
-					few are chosen to become Time Lords. </span>
-				<span class="A-audiobook">It takes and initiate over 60 years at the Academy to grasp the basics of temporal theory. </span>
-				<span class="A-game">But once they have demonstrated their intellectual perseverance they would be trained in advanced temporal theory, TT
+				<span class="A-game"></span><span class="A-tv">&nbsp;</span><span class="A-audiobook">It takes and initiate over 60 years at the Academy to grasp the basics of temporal theory. </span>
+				<span class="A-game">But once they have demonstrated their intellectual perseverance, they would be trained in advanced temporal theory, TT
 					Capsule design, and space-time navigation. </span>
 				<span class="A-audiobook">Symbiotic Nuclei are granted when the appropriate course work has been completed </span>
 				<span class="A-game">and a score of at least 51% has been achieved.</span>
@@ -923,8 +915,7 @@ Operation and Maintenance, Transcendental Dimensions, </span>
 				<span class="A-audiobook">through the direct link to the Eye of Harmony that their heart (or one of their hearts if a Newblood) provides.<br> </span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">It takes at least 60 years to grasp the basics of temporal theory,</span>
-				<span class="A-game"> and it takes at least a 100 years to become ready for the final exam. </span>
+				<span class="A-audiobook"></span><span class="A-game">It takes at least a 100 years to become ready for the final exam. </span>
 				<span class="A-infinity">Junior Time Lords hoping to reach Apprentice rank much spend some time serving as technicians. </span>
 				<span class="A-audiobook">Passing the </span>
 				<span class="A-game">Final</span>
@@ -967,7 +958,7 @@ final preparations right before their graduation ceremony.&nbsp;</span>Graduatio
 					<span class="A-fanon">The rest are probably Apprentice and Junior Grade Time Lords. </span>For this reason, despite different ages and different
 					entrance years, all students selected to become Time Lords
 					<span class="A-fanon">in a certain millennium </span>will have the same graduation year. </span>
-				<span class="A-tv">Graduates (without doctorates) can be as young as 125 years old. The students scores for the final exams are kept confidential.
+				<span class="A-tv">Graduates (without doctorates) can be as young as 125 years old but, <span class="A-fanon">because of the graduation schedules,</span> <span class="A-audiobook">many will attend for centuries before their certification.</span> The students scores for the final exams are kept confidential.
 					</span>
 				<span class="A-licensed">The graduating Time Lord </span>
 				<span class="A-game">generally has the equivalent of a human Masters in all technical and scientific disciplines, </span>
